# xTransfer-P2P

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
relay-server/: Cargo.toml
relay-server/src/: main.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  network.rs  transfer.rs
src-tauri/src/p2p/: behaviour.rs  codec.rs  encryption.rs  mod.rs  swarm.rs  transfer.rs
src/components/ConnectModal/: ConnectModal.css  ConnectModal.tsx
src/components/DropZone/: DropZone.css  DropZone.tsx
src/components/IncomingFilePrompt/: IncomingFilePrompt.css  IncomingFilePrompt.tsx
src/components/PeerList/: PeerList.css  PeerList.tsx
src/components/Settings/: Settings.css  Settings.tsx
src/components/TransferList/: TransferList.css  TransferList.tsx
src/components/UpdateBanner/: UpdateBanner.css  UpdateBanner.tsx
src/hooks/: usePeerAliases.ts  usePeers.ts  useSettings.ts  useTransfers.ts  useUpdater.ts
src/lib/: tauri.ts  types.ts  utils.ts
