[package]
name = "xtransfer-relay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xtransfer-relay"
path = "src/main.rs"

[dependencies]
libp2p = { version = "0.55", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "relay",
    "identify",
    "ping",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
